Fix embed container misalignment

--- a/templates/owo-template.css
+++ b/templates/owo-template.css
@@ -139,7 +139,6 @@ nav {
 
 .embed-container {
     text-align: center;
-    max-width: 80%;
 }
 
 img {
